--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <a href="galerija_slika.html">Galerija slika</a> 
     <br></br> 
+    <a href="galerija_slika.html">Galerija slika</a> 
+    <br></br>
 
     
   </body>
