--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <a href="galerija_slika.html">Galerija slika</a> 
     <br></br> 
-    <a href="galerija_slika.html">Galerija slika</a> 
+    <a href="ozzy_osbourne.html">Galerija slika</a> 
     <br></br>
 
     
