--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 
   
   <head>
-    <title>bend</title>
+    <title>Black Sabbath</title>
     <meta charset="UTF-8"> 
-    
   </head>
   
   <body>
     <a href="galerija_slika.html">Galerija slika</a> 
     <br></br> 
-    <a href="ozzy_osbourne.html">Galerija slika</a> 
+    <a href="ozzy_osbourne.html">Ozzy Osbourne</a> 
     <br></br>
+    <h1>Black Sabbath</h1>
 
     
   </body>
