--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
       <a href="galerija_slika.html">Galerija slika</a> 
       <br></br> 
-   
+      <a href="ozzy_osbourne.html">Ozzy Osbourne</a> 
+      <br></br>
+      <h1>Black Sabbath</h1>
 
   </body>
 
