--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-    		<table border="1" width=50% cellpadding=10 cellspacing=0>
+    		<table border="1" width=50% cellpadding=10 cellspacing=10'>
 
 			<tr align=centar>
 				<th >Ime i prezime</th>
@@ -16,17 +16,7 @@
 				<td>Zec</td>
 				<td>1981.</td>
 			</tr>
-			<tr>
-				<td>Ivan</td>
-				<td rowspan=2>Horvat</td>
-				<td>1984.</td>
-			</tr>
-
-			<tr>
-				<td>Hrvoje</td>
-				<td>1970.</td>
-			</tr>
-
+			
 		</table>
   </body>
 </html>
