--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -13,13 +13,13 @@
 			<tr>
 				<td>Marko</td>
 				<td>Zec</td>
-				<td>1981.</td>
+				
 			</tr>
 
 			<tr>
 				<td>Ivan</td>
-				<td rowspan=2>Horvat</td>
-				<td>1984.</td>
+				<td>Horvat</td>
+				
 			</tr>
 
 			<tr>
