--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -6,25 +6,25 @@
   <body>
     		<table border="1" width=30%  >
 
-			<tr align=centar>
+			<tr align=left>
 				<th >Ime i prezime</th>
-				<th>Rođen</th>
+				<th>John Michael "Ozzy" Osbourne</th>
 			</tr>
 			<tr>
-				<td>Marko</td>
-				<td>Zec</td>
+				<td>Rođen</td>
+				<td>3. prosinca 1948.</td>
 				
 			</tr>
 
 			<tr>
-				<td>Ivan</td>
-				<td>Horvat</td>
+				<td>Zanimanje</td>
+				<td>glazbenik, skladatelj</td>
 				
 			</tr>
 
 			<tr>
-				<td>Hrvoje</td>
-				<td>1970.</td>
+				<td>Nadimak</td>
+				<td>Princ tame (engl. Prince of Darkness)</td>
 			</tr>
 
 		
