--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -8,22 +8,22 @@
 
 			<tr align=left>
 				<th >Ime i prezime</th>
-				<th>John Michael "Ozzy" Osbourne</th>
+				<td>John Michael "Ozzy" Osbourne</th>
 			</tr>
 			<tr>
-				<td>Rođen</td>
+				<th>Rođen</td>
 				<td>3. prosinca 1948.</td>
 				
 			</tr>
 
 			<tr>
-				<td>Zanimanje</td>
+				<th>Zanimanje</td>
 				<td>glazbenik, skladatelj</td>
 				
 			</tr>
 
 			<tr>
-				<td>Nadimak</td>
+				<th>Nadimak</td>
 				<td>Princ tame (engl. Prince of Darkness)</td>
 			</tr>
 
