--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -6,23 +6,23 @@
   <body>
     		<table border="1" width=30%  >
 
-			<tr align=left>
+			<tr align=center>
 				<th >Ime i prezime</th>
 				<td>John Michael "Ozzy" Osbourne</th>
 			</tr>
-			<tr>
+			<tr align=center>
 				<th>Rođen</td>
 				<td>3. prosinca 1948.</td>
 				
 			</tr>
 
-			<tr>
+			<tr align=center>
 				<th>Zanimanje</td>
 				<td>glazbenik, skladatelj</td>
 				
 			</tr>
 
-			<tr>
+			<tr align=center>
 				<th>Nadimak</td>
 				<td>Princ tame (engl. Prince of Darkness)</td>
 			</tr>
