--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -7,6 +7,9 @@
 
 	  <h1>OZZY OSBOURNE</h1>
 	  <br></br>
+	  <p>
+		  Mnogi obožavatelji nazivaju "Ocem heavy metala"
+	  </p>
     		<table border="1" width=30%  >
 
 			<tr align=center>
@@ -29,10 +32,11 @@
 				<th>Nadimak</td>
 				<td>Princ tame (engl. Prince of Darkness)</td>
 			</tr>
-
-		
-
 			
 		</table>
+
+	  <p>
+		  
+	  </p>
   </body>
 </html>
