--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -4,13 +4,14 @@
   </head>
 
   <body>
-
+	
 	  <h1>OZZY OSBOURNE</h1>
 	  <br>
 	  <p>
 		  Mnogi obožavatelji nazivaju "Ocem heavy metala"
 	  </p>
 	  <br>
+	  <img src="ozzy.jpg">
     		<table border="1" width=30%  >
 
 			<tr align=center>
