--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="ozzy_osbourne.html">Ozzy Osbourne</a> 
       <br></br>
       <h1>Black Sabbath</h1>
-
+      <img src=ozzy.jpg">
   </body>
 
   
