--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <a href="ozzy_osbourne.html">Ozzy Osbourne</a> 
       <br></br>
       <h1>Black Sabbath</h1>
-      <img src="ozzy.jpg">
+      <h3>Što je Black Sabbath? </h3>
+      <ul>
+        <li>Engleska rock grupa osnovana u Birminghamu 1968. pod nazivom Earth</li>
+      </ul>  
   </body>
 
   
