--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
       <a href="ozzy_osbourne.html">Ozzy Osbourne</a> 
       <br></br>
       <h1>Black Sabbath</h1>
+      <br>
       <h3>Što je Black Sabbath? </h3>
       <ul>
         <li>Engleska rock grupa osnovana u Birminghamu 1968. pod nazivom Earth</li>
+        <li>Smatra ih se pionirima heavy metala</li>
+        <li>Primljeni su u Rock and Roll Hall of Fame 2006. godine</li>
       </ul>  
+      <br>
+      <h3>Članovi benda</h3>
   </body>
 
   
