--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -11,7 +11,7 @@
 		  Mnogi obožavatelji nazivaju "Ocem heavy metala"
 	  </p>
 	  <br>
-	  <img src="ozzy.jpg">
+	  <img class="ozzy" src="ozzy.jpg">
     		<table border="1" width=30%  >
 
 			<tr align=center>
