--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       </ul>  
       <br>
       <h3>Članovi benda</h3>
+        <ul>
+          <li>gitarist  Tony Iommi</li>
+          <li>bubnjar Bill Ward</li>
+          <li>basist Geezer Butler</li>
+          <li>pjevač Ozzy Osbourne</li>
+        </ul>
+    
   </body>
 
   
