--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
           <li>pjevač Ozzy Osbourne</li>
         </ul>
     
-		<img src="members.jpg" usemap="#mapa" 
+	<img src="members.jpg" usemap="#mapa" 
+	<map name="mapa">
+			<area shape="circle" coords="" alt="Tony Iommi" href="https://en.wikipedia.org/wiki/Tony_Iommi">
+			<area shape="circle" coords="" alt="Bill Ward" href="https://en.wikipedia.org/wiki/Bill_Ward_(musician)">
+			<area shape="circle" coords="" alt="Geezer Butler" href="https://en.wikipedia.org/wiki/Geezer_Butler">
+			<area shape="circle" coords="" alt="Ozzy Osbourne" href="https://en.wikipedia.org/wiki/Ozzy_Osbourne">
+			
+		</map>
     
   </body>
 
