--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -7,6 +7,7 @@
 	
 	  <h1>OZZY OSBOURNE</h1>
 	  <br>
+	  <a href="index.html">Početna stranica</a> 
 	  <p>
 		  Mnogi obožavatelji nazivaju "Ocem heavy metala"
 	  </p>
