--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 			<area shape="circle" coords="" alt="Ozzy Osbourne" href="https://en.wikipedia.org/wiki/Ozzy_Osbourne">
 			
 		</map>
+
+	  <ul id=jahaci>
+		<li><a href="index.html">Početna</a></li>
+		<li><a href="koncerti.html">Ozzy Osburne</a></li>
+		<li><a href="pjesme.html">Albumi</a></li>
+		<li><a href="slike.html">Galerija slika</a></li>
+		<li><a href="kontakt.html">Kontakt</a></li>
+	</ul>
     
   </body>
 
