--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
 	  <ul id=jahaci>
 		<li><a href="index.html">Početna</a></li>
-		<li><a href="koncerti.html">Ozzy Osburne</a></li>
-		<li><a href="pjesme.html">Albumi</a></li>
-		<li><a href="slike.html">Galerija slika</a></li>
+		<li><a href="ozzy_osbourne.html">Ozzy Osburne</a></li>
+		<li><a href="Albumi.html">Albumi</a></li>
+		<li><a href="galerija_slika.html">Galerija slika</a></li>
 		<li><a href="kontakt.html">Kontakt</a></li>
 	</ul>
     
