--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
       <title>Black Sabbath</title>
       <meta charset="UTF-8"> 
-	<link rel="sttylesheet" type="text/css" href="moj_stil.css"
+	    <link rel="sttylesheet" type="text/css" href="moj_stil.css">
   </head>
   
   <body>
