--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -4,7 +4,13 @@
   </head>
 
   <body>
-	
+	<ul id=jahaci>
+		<li><a href="index.html">POČETNA</a></li>
+		<li><a href="Albumi.html">Albumi</a></li>
+		<li><a href="ozzy_osbourne.html">Ozzy Osbourne</a></li>
+		<li><a href="galerija_slika.html">Galerija slika</a></li>
+		<li><a href="kontakt.html">KONTAKT</a>Kontakt</li>
+	</ul>
 	  <h1>OZZY OSBOURNE</h1>
 	  <br>
 	  <a href="index.html">Početna stranica</a> 
