--- a/Albumi.html
+++ b/Albumi.html
@@ -1,1 +1,12 @@
+<html>
+  <body>
+    <ul id=jahaci>
+		<li><a href="index.html">POČETNA</a></li>
+		<li><a href="Albumi.html">Albumi</a></li>
+		<li><a href="ozzy_osbourne.html">Ozzy Osbourne</a></li>
+		<li><a href="galerija_slika.html">Galerija slika</a></li>
+		<li><a href="kontakt.html">KONTAKT</a>Kontakt</li>
+	</ul>
+  </body>
+</html>
 
