--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       </ul>  
       <br>
       <h3>Članovi benda</h3>
+	  <p>Članovi benda su:</p>
+	  <br>
         <ul>
           <li>gitarist  Tony Iommi</li>
           <li>bubnjar Bill Ward</li>
