--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   
   <body>
-	 <ul id=jahaci>
+	 <ul id="jahaci">
 		<li><a href="index.html">Početna</a></li>
 		<li><a href="ozzy_osbourne.html">Ozzy Osburne</a></li>
 		<li><a href="Albumi.html">Albumi</a></li>
