--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-	<ul id=jahaci>
+	<ul id="jahaci">
 		<li><a href="index.html">POČETNA</a></li>
 		<li><a href="Albumi.html">Albumi</a></li>
 		<li><a href="ozzy_osbourne.html">Ozzy Osbourne</a></li>
