--- a/Albumi.html
+++ b/Albumi.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <ul id=jahaci>
+    <ul id="jahaci">
 		<li><a href="index.html">POČETNA</a></li>
 		<li><a href="Albumi.html">Albumi</a></li>
 		<li><a href="ozzy_osbourne.html">Ozzy Osbourne</a></li>
