--- a/galerija_slika.html
+++ b/galerija_slika.html
@@ -1,11 +1,14 @@
 <html>
-  <body>
-    <ul id="jahaci">
-		<li><a href="index.html">POČETNA</a></li>
-		<li><a href="Albumi.html">Albumi</a></li>
-		<li><a href="ozzy_osbourne.html">Ozzy Osbourne</a></li>
-		<li><a href="galerija_slika.html">Galerija slika</a></li>
-		<li><a href="kontakt.html">KONTAKT</a>Kontakt</li>
-	</ul>
-  </body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="moj_stil.css">
+	</head>
+		  <body>
+		    <ul id="jahaci">
+				<li><a href="index.html">POČETNA</a></li>
+				<li><a href="Albumi.html">Albumi</a></li>
+				<li><a href="ozzy_osbourne.html">Ozzy Osbourne</a></li>
+				<li><a href="galerija_slika.html">Galerija slika</a></li>
+				<li><a href="kontakt.html">KONTAKT</a>Kontakt</li>
+			</ul>
+		  </body>
 </html>
