--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -1,6 +1,9 @@
  <html>
   <head>
     <title>Ozzy Osbourne</title>
+	  
+		<link rel="stylesheet" type="text/css" href="moj_stil.css">
+	
   </head>
 
   <body>
