--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -1,10 +1,8 @@
  <html>
   <head>
     <title>Ozzy Osbourne</title>
-	  
-		<link rel="stylesheet" type="text/css" href="moj_stil.css">
-	
-  </head>
+	<link rel="stylesheet" type="text/css" href="moj_stil.css">
+  </head
 
   <body>
 	<ul id="jahaci">
