--- a/kontakt.html
+++ b/kontakt.html
@@ -5,10 +5,10 @@
 		  <body>
 		    <ul id="jahaci">
 				<li><a href="index.html">POČETNA</a></li>
-				<li><a href="Albumi.html">Albumi</a></li>
-				<li><a href="ozzy_osbourne.html">Ozzy Osbourne</a></li>
-				<li><a href="galerija_slika.html">Galerija slika</a></li>
-				<li><a href="kontakt.html">KONTAKT</a>Kontakt</li>
+				<li><a href="Albumi.html">ALBUMI</a></li>
+				<li><a href="ozzy_osbourne.html">OZZY OSBOURNE</a></li>
+				<li><a href="galerija_slika.html">GALERIJA SLIKA</a></li>
+				<li><a href="kontakt.html">KONTAKT</a></li>
 			</ul>
 		  </body>
 </html>
