--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   
   <body>
 	 <ul id="jahaci">
-		<li><a href="index.html">Početna</a></li>
-		<li><a href="ozzy_osbourne.html">Ozzy Osburne</a></li>
-		<li><a href="Albumi.html">Albumi</a></li>
-		<li><a href="galerija_slika.html">Galerija slika</a></li>
-		<li><a href="kontakt.html">Kontakt</a></li>
+		<li><a href="index.html">POČETNA</a></li>
+		<li><a href="Albumi.html">ALBUMI</a></li>
+		<li><a href="ozzy_osbourne.html">OZZY OSBOURNE</a></li>
+		<li><a href="galerija_slika.html">GALERIJA SLIKA</a></li>
+		<li><a href="kontakt.html">KONTAKT</a></li>
 	</ul>
     
       <br></br>
