--- a/kontakt.html
+++ b/kontakt.html
@@ -7,9 +7,21 @@
 				<li><a href="index.html">POČETNA</a></li>
 				<li><a href="Albumi.html">ALBUMI</a></li>
 				<li><a href="ozzy_osbourne.html">OZZY OSBOURNE</a></li>
-				<li><a href="galerija_slika.html">GALERIJA SLIKA</a></li>
 				<li><a href="kontakt.html">KONTAKT</a></li>
 			</ul>
+			  <br> 
+			  
+			  <a href="mailto:blazevicmura@gmail.com">POŠALJI MAIL</a>
+			  <form>
+				<h2>Unesi ime:</h2>
+				<input type="text" name="ime" size="20" maxlength="18">
+				<h2>Unesi prezime:</h2>
+				<input type="text" name="prezime" size="20" maxlength="18">
+				<h2>Unesi komentar:</h2>
+				<textarea name="komentar" rows="20" cols="100">tekst</textarea>
+				<br></br>
+				<input type="reset" value="POŠALJI" name="gumbi2"></input>
+			  </form>
 		  </body>
 </html>
 
