--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   
   <body>
-
-	  <h1>Black Sabbath</h1>
+	<br>
+	  <h1 class="naslov">Black Sabbath</h1>
       <br>
 	  <ul id="jahaci">
 		<li><a href="index.html">POČETNA</a></li>
