--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
 	<br>
 	  <h1 class="naslov">Black Sabbath</h1>
+	  <img src="slika_pozadina_naslov.jpg">
       <br>
 	  <ul id="jahaci">
 		<li><a href="index.html">POČETNA</a></li>
@@ -36,7 +37,7 @@
           <li>pjevač Ozzy Osbourne</li>
         </ul>
     
-	<img src="members.jpg" usemap="#mapa" 
+	<img src="members.jpg" usemap="#mapa" >
 	<map name="mapa">
 			<area shape="circle" coords="" alt="Tony Iommi" href="https://en.wikipedia.org/wiki/Tony_Iommi">
 			<area shape="circle" coords="" alt="Bill Ward" href="https://en.wikipedia.org/wiki/Bill_Ward_(musician)">
