--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 	<br>
 	  <h1 class="naslov">Black Sabbath</h1>
-	  <img src="slika_pozadina_naslov.jpg">
+	  <img class="naslov_pozadina" src="slika_pozadina_naslov.jpg">
       <br>
 	  <ul id="jahaci">
 		<li><a href="index.html">POČETNA</a></li>
