--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
         <li>Primljeni su u Rock and Roll Hall of Fame 2006. godine</li>
       </ul>  
       <br>
-
+	<h3>Originalni članovi grupe Black Sabbath bili su:</h3>
+	  <ul>
+		<li>Ozzy Osbourne - vokal</li>
+		  <li>Tony Iommi - gitara</li>
+		  <li>Geezer Butler - bas gitara</li>
+		  <li>Bill Ward - bubnjevi</li>
+		  
+	</ul>
     
 	<img src="members.jpg" usemap="#mapa" >
 	<map name="mapa">
