--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     
 	<img src="members.jpg" usemap="#mapa" >
 	<map name="mapa">
-			<area shape="circle" coords="" alt="Tony Iommi" href="https://en.wikipedia.org/wiki/Tony_Iommi">
-			<area shape="circle" coords="" alt="Bill Ward" href="https://en.wikipedia.org/wiki/Bill_Ward_(musician)">
-			<area shape="circle" coords="" alt="Geezer Butler" href="https://en.wikipedia.org/wiki/Geezer_Butler">
-			<area shape="circle" coords="" alt="Ozzy Osbourne" href="https://en.wikipedia.org/wiki/Ozzy_Osbourne">
+			<area shape="circle" coords="282 117 21" alt="Tony Iommi" href="https://en.wikipedia.org/wiki/Tony_Iommi">
+			<area shape="circle" coords="500 1321 80" alt="Bill Ward" href="https://en.wikipedia.org/wiki/Bill_Ward_(musician)">
+			<area shape="circle" coords="760 495 120" alt="Geezer Butler" href="https://en.wikipedia.org/wiki/Geezer_Butler">
+			<area shape="circle" coords="350 407 100" alt="Ozzy Osbourne" href="https://en.wikipedia.org/wiki/Ozzy_Osbourne">
 			
 		</map>
 
