--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 			
 		</map>
 
+	 <p>
+		 Black Sabbath ima mnogo poznatih pjesama, ali jedna od najpoznatijih je definitivno "Paranoid". Ova pjesma je izdana kao singl 1970. godine i postala je simbolom i himnom heavy metala.
+	 </p> 
+	  <a href="https://www.youtube.com/watch?v=BOTIIw76qiE">Poslušaj pjesmu</a>
 	 
   </body>
 
