--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		  
 	</ul>
     
-	<img src="members.jpg" usemap="#mapa" >
+	<img clss="clanovi" src="members.jpg" usemap="#mapa" >
 	<map name="mapa">
 			<area shape="circle" coords="282 117 21" alt="Tony Iommi" href="https://en.wikipedia.org/wiki/Tony_Iommi">
 			<area shape="circle" coords="500 1321 80" alt="Bill Ward" href="https://en.wikipedia.org/wiki/Bill_Ward_(musician)">
