--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -46,7 +46,16 @@
 		</table>
 
 	  <p>
-		  
+		  Ozzy Osbourne, rođen kao John Michael Osbourne 3. prosinca 1948. godine, britanski je pjevač, tekstopisac i televizijska ličnost najpoznatiji kao frontmen heavy metal benda Black Sabbath. Evo nekoliko činjenica o njemu:
+	  </p>
+	  <p>Postao je poznat kao pjevač i frontmen Black Sabbatha, jednog od najutjecajnijih heavy metal bendova svih vremena.
+	  Nakon što je napustio Black Sabbath 1979., Ozzy je imao uspješnu solo karijeru. Objavio je mnogo albuma i singlova, od kojih su neki postali veliki hitovi.
+	  Također poznat je po svojim kontroverznim izjavama, osobito tijekom intervjua i na društvenim mrežama.
+	  Smatra se jednim od najutjecajnijih pjevača u povijesti heavy metala, a njegov vokalni stil i energija inspirirali su generacije glazbenika.
+	  Objavio je autobiografske knjige, uključujući "I Am Ozzy" i "Trust Me, I'm Dr. Ozzy".
+	  Tijekom godina imao je niz zdravstvenih problema, uključujući ozljede, operacije i dijagnozu Parkinsonove bolesti.
+	   Unatoč zdravstvenim problemima, Ozzy je i dalje nastupao na turnejama i koncertima, iako je najavio da će se povući s turneja nakon "No More Tours 2" turneje.
+	
 	  </p>
   </body>
 </html>
