--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   
   <body>
-	  <h1 class="naslov">Black Sabbath</h1>
+	  <h1 class="naslov">BLACK SABBATH</h1>
 	  <ul id="jahaci">
 		<li><a href="index.html">POČETNA</a></li>
 		<li><a href="Albumi.html">ALBUMI</a></li>
@@ -37,7 +37,7 @@
 	<img clss="clanovi" src="members.jpg" usemap="#mapa" >
 	<map name="mapa">
 			<area shape="circle" coords="282 117 21" alt="Tony Iommi" href="https://en.wikipedia.org/wiki/Tony_Iommi">
-			<area shape="circle" coords="500 1321 80" alt="Bill Ward" href="https://en.wikipedia.org/wiki/Bill_Ward_(musician)">
+			<area shape="circle" coords="500 132 80" alt="Bill Ward" href="https://en.wikipedia.org/wiki/Bill_Ward_(musician)">
 			<area shape="circle" coords="760 495 120" alt="Geezer Butler" href="https://en.wikipedia.org/wiki/Geezer_Butler">
 			<area shape="circle" coords="350 407 100" alt="Ozzy Osbourne" href="https://en.wikipedia.org/wiki/Ozzy_Osbourne">
 			
