--- a/Albumi.html
+++ b/Albumi.html
@@ -3,6 +3,7 @@
 		<link rel="stylesheet" type="text/css" href="moj_stil.css">
 	</head>
 	  <body>
+		  <h1 class="naslov">BLACK SABBATH</h1>
 	    <ul id="jahaci">
 			<li><a href="index.html">POČETNA</a></li>
 			<li><a href="Albumi.html">ALBUMI</a></li>
