--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -5,7 +5,7 @@
   </head
 
   <body>
-	  
+	  <h1 class="naslov">BLACK SABBATH</h1>
 	<ul id="jahaci">
 		<li><a href="index.html">POČETNA</a></li>
 		<li><a href="Albumi.html">ALBUMI</a></li>
