--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		  
 	</ul>
     
-	<img clss="clanovi" src="members.jpg" usemap="#mapa" >
+	<img clss="clanovi" src="members.jpg" usemap="#mapa" width=430 height=500>
 	<map name="mapa">
 			<area shape="circle" coords="282 117 21" alt="Tony Iommi" href="https://en.wikipedia.org/wiki/Tony_Iommi">
 			<area shape="circle" coords="500 132 80" alt="Bill Ward" href="https://en.wikipedia.org/wiki/Bill_Ward_(musician)">
