--- a/Albumi.html
+++ b/Albumi.html
@@ -10,6 +10,44 @@
 			<li><a href="ozzy_osbourne.html">OZZY OSBOURNE</a></li>
 			<li><a href="kontakt.html">KONTAKT</a></li>
 		</ul>
+
+		  <div class="container">
+		<div class="carousel">
+		<input type="radio" id="carousel-1" name="carousel[]" checked>
+		<input type="radio" id="carousel-2" name="carousel[]">
+    		 <input type="radio" id="carousel-3" name="carousel[]">
+		<input type="radio" id="carousel-4" name="carousel[]">
+		<input type="radio" id="carousel-5" name="carousel[]">
+		<ul class="carousel__items">
+			<li class="carousel__item"><img src="https://m.media-amazon.com/images/I/6157p2Zkh1L._SY300_SX300_QL70_FMwebp_.jpg" alt=""></li>
+			<li class="carousel__item"><img src="https://m.media-amazon.com/images/I/81YM5rVzOOL._UF1000,1000_QL80_.jpg" alt=""></li>
+			<li class="carousel__item"><img src="" alt="https://upload.wikimedia.org/wikipedia/en/4/40/Bsmor.jpg"></li>
+			<li class="carousel__item"><img src="//" alt="https://upload.wikimedia.org/wikipedia/en/3/3b/Black_Sabbath_SbS.jpg"></li>
+			<li class="carousel__item"><img src="https://upload.wikimedia.org/wikipedia/en/f/f8/Black_Sabbath_Heaven_and_Hell.jpg" alt=""></li>
+		</ul>
+     <div class="carousel__prev">
+     	<label for="carousel-1"></label>
+     	<label for="carousel-2"></label>
+     	<label for="carousel-3"></label>
+     	<label for="carousel-4"></label>
+     	<label for="carousel-5"></label>
+     </div>
+     <div class="carousel__next">
+       <label for="carousel-1"></label>
+       <label for="carousel-2"></label>
+       <label for="carousel-3"></label>
+       <label for="carousel-4"></label>
+       <label for="carousel-5"></label>
+     </div>
+     <div class="carousel__nav">
+       <label for="carousel-1"></label>
+       <label for="carousel-2"></label>
+       <label for="carousel-3"></label>
+       <label for="carousel-4"></label>
+       <label for="carousel-5"></label>
+     </div>
+   </div>
+ </div>
 	  </body>
 </html>
 
