--- a/Albumi.html
+++ b/Albumi.html
@@ -11,43 +11,33 @@
 			<li><a href="kontakt.html">KONTAKT</a></li>
 		</ul>
 
-		  <div class="container">
-		<div class="carousel">
-		<input type="radio" id="carousel-1" name="carousel[]" checked>
-		<input type="radio" id="carousel-2" name="carousel[]">
-    		 <input type="radio" id="carousel-3" name="carousel[]">
-		<input type="radio" id="carousel-4" name="carousel[]">
-		<input type="radio" id="carousel-5" name="carousel[]">
-		<ul class="carousel__items">
-			<li class="carousel__item"><img src="https://m.media-amazon.com/images/I/6157p2Zkh1L._SY300_SX300_QL70_FMwebp_.jpg" alt=""></li>
-			<li class="carousel__item"><img src="https://m.media-amazon.com/images/I/81YM5rVzOOL._UF1000,1000_QL80_.jpg" alt=""></li>
-			<li class="carousel__item"><img src="" alt="https://upload.wikimedia.org/wikipedia/en/4/40/Bsmor.jpg"></li>
-			<li class="carousel__item"><img src="//" alt="https://upload.wikimedia.org/wikipedia/en/3/3b/Black_Sabbath_SbS.jpg"></li>
-			<li class="carousel__item"><img src="https://upload.wikimedia.org/wikipedia/en/f/f8/Black_Sabbath_Heaven_and_Hell.jpg" alt=""></li>
-		</ul>
-     <div class="carousel__prev">
-     	<label for="carousel-1"></label>
-     	<label for="carousel-2"></label>
-     	<label for="carousel-3"></label>
-     	<label for="carousel-4"></label>
-     	<label for="carousel-5"></label>
-     </div>
-     <div class="carousel__next">
-       <label for="carousel-1"></label>
-       <label for="carousel-2"></label>
-       <label for="carousel-3"></label>
-       <label for="carousel-4"></label>
-       <label for="carousel-5"></label>
-     </div>
-     <div class="carousel__nav">
-       <label for="carousel-1"></label>
-       <label for="carousel-2"></label>
-       <label for="carousel-3"></label>
-       <label for="carousel-4"></label>
-       <label for="carousel-5"></label>
-     </div>
-   </div>
- </div>
+		 <div class="carousel-wrapper">
+			  <span id="item-1"></span>
+			  <span id="item-2"></span>
+			  <span id="item-3"></span>
+			  <div class="carousel-item item-1">
+			    <h2>Black Sabbath (1970.)</h2>
+			    <p>Debi album benda smatra se jednim od najutjecajnijih albuma u povijesti heavy metala. Sadrži hitove poput "Black Sabbath" i "N.I.B." te je klasično djelo koje je postavilo temelje za cijeli žanr.
+
+				</p>
+			    <a class="arrow arrow-prev" href="#item-3"></a>
+			    <a class="arrow arrow-next" href="#item-2"></a>
+			  </div>
+			  
+			  <div class="carousel-item item-2">
+			    <h2>Paranoid (1970.) </h2>
+			    <p>Ovaj album također je izdan 1970. godine i postao je jedan od najprodavanijih i najpoznatijih albuma benda. Sadrži neke od najvećih hitova benda, uključujući naslovnu pjesmu "Paranoid", "Iron Man" i "War Pigs".</p>
+			    <a class="arrow arrow-prev" href="#item-1"></a>
+			    <a class="arrow arrow-next" href="#item-3"></a>
+			  </div>
+			  
+			  <div class="carousel-item item-3">
+			    <h2>Master of Reality (1971.) </h2>
+			    <p>Treći album benda donosi teški zvuk i mračne tekstove koji su postali zaštitni znak benda. Hitovi s ovog albuma uključuju "Sweet Leaf" i "Children of the Grave".</p>
+			    <a class="arrow arrow-prev" href="#item-2"></a>
+			    <a class="arrow arrow-next" href="#item-1"></a>
+			  </div>
+</div>
 	  </body>
 </html>
 
