--- a/Albumi.html
+++ b/Albumi.html
@@ -10,14 +10,14 @@
 			<li><a href="ozzy_osbourne.html">OZZY OSBOURNE</a></li>
 			<li><a href="kontakt.html">KONTAKT</a></li>
 		</ul>
-
+		<br>
 		 <div class="carousel-wrapper">
 			  <span id="item-1"></span>
 			  <span id="item-2"></span>
 			  <span id="item-3"></span>
 			  <div class="carousel-item item-1">
-			    <h2>Black Sabbath (1970.)</h2>
-			    <p>Debi album benda smatra se jednim od najutjecajnijih albuma u povijesti heavy metala. Sadrži hitove poput "Black Sabbath" i "N.I.B." te je klasično djelo koje je postavilo temelje za cijeli žanr.
+			    <h2></h2>
+			    <p>
 
 				</p>
 			    <a class="arrow arrow-prev" href="#item-3"></a>
@@ -25,19 +25,24 @@
 			  </div>
 			  
 			  <div class="carousel-item item-2">
-			    <h2>Paranoid (1970.) </h2>
-			    <p>Ovaj album također je izdan 1970. godine i postao je jedan od najprodavanijih i najpoznatijih albuma benda. Sadrži neke od najvećih hitova benda, uključujući naslovnu pjesmu "Paranoid", "Iron Man" i "War Pigs".</p>
+			    <h2></h2>
+			    <p></p>
 			    <a class="arrow arrow-prev" href="#item-1"></a>
 			    <a class="arrow arrow-next" href="#item-3"></a>
 			  </div>
 			  
 			  <div class="carousel-item item-3">
-			    <h2>Master of Reality (1971.) </h2>
-			    <p>Treći album benda donosi teški zvuk i mračne tekstove koji su postali zaštitni znak benda. Hitovi s ovog albuma uključuju "Sweet Leaf" i "Children of the Grave".</p>
+			    <h2></h2>
+			    <p></p>
 			    <a class="arrow arrow-prev" href="#item-2"></a>
 			    <a class="arrow arrow-next" href="#item-1"></a>
 			  </div>
 </div>
+		  	<br>
+
+		  <h3 class="podnaslov1">Black Sabbath (1970.)</h3>
+		    <h3 class="podnaslov1">Paranoid (1970.) </h3>
+		   <h3 class="podnaslov1">Master of Reality (1971.) </h3>
 	  </body>
 </html>
 
