--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       
       <h3 class="podnaslov1">Što je Black Sabbath? </h3>
       <ul>
-        <li class="natulnica1">Engleska rock grupa osnovana u Birminghamu 1968. pod nazivom Earth</li>
+        <li class="podnaslov1">Engleska rock grupa osnovana u Birminghamu 1968. pod nazivom Earth</li>
         <li class="natulnica1">Smatra ih se pionirima heavy metala</li>
         <li class="natulnica1">Primljeni su u Rock and Roll Hall of Fame 2006. godine</li>
       </ul>  
