--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -16,7 +16,7 @@
 	  <br>
 	  
 	  <p>
-		  Mnogi obožavatelji nazivaju "Ocem heavy metala"
+		  Mnogi obožavatelji nazivaju ga "Ocem heavy metala"
 	  </p>
 	  <br>
 	  <img class="ozzy" src="ozzy.jpg" width=333.33 height=500>
