--- a/Albumi.html
+++ b/Albumi.html
@@ -41,8 +41,13 @@
 		  	<br>
 
 		  <h3 class="podnaslov1">Black Sabbath (1970.)</h3>
+		  <p class="natuknica1">Debi album benda smatra se jednim od najutjecajnijih albuma u povijesti heavy metala. Sadrži hitove poput "Black Sabbath" i "N.I.B." te je klasično djelo koje je postavilo temelje za cijeli žanr.</p>
 		    <h3 class="podnaslov1">Paranoid (1970.) </h3>
+		  <p class="natuknica1"> Ovaj album također je izdan 1970. godine i postao je jedan od najprodavanijih i najpoznatijih albuma benda. Sadrži neke od najvećih hitova benda, uključujući naslovnu pjesmu "Paranoid", "Iron Man" i "War Pigs".</p>
 		   <h3 class="podnaslov1">Master of Reality (1971.) </h3>
+		  <p class="natuknica1">
+			   Treći album benda donosi teški zvuk i mračne tekstove koji su postali zaštitni znak benda. Hitovi s ovog albuma uključuju "Sweet Leaf" i "Children of the Grave".
+		  </p>
 	  </body>
 </html>
 
