--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     
       <br></br>
       
-      <h3 class="podnaslov1">Što je Black Sabbath? </h3>
-      <ul>
-        <li class="podnaslov1">Engleska rock grupa osnovana u Birminghamu 1968. pod nazivom Earth</li>
-        <li class="natulnica1">Smatra ih se pionirima heavy metala</li>
-        <li class="natulnica1">Primljeni su u Rock and Roll Hall of Fame 2006. godine</li>
+      <h3 >Što je Black Sabbath? </h3>
+      <ul class="podnaslov1">
+        <li >Engleska rock grupa osnovana u Birminghamu 1968. pod nazivom Earth</li>
+        <li >Smatra ih se pionirima heavy metala</li>
+        <li >Primljeni su u Rock and Roll Hall of Fame 2006. godine</li>
       </ul>  
       <br>
 	<h3 class="podnaslov1">Originalni članovi grupe Black Sabbath bili su:</h3>
