--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -19,7 +19,7 @@
 		  Mnogi obožavatelji nazivaju ga "Ocem heavy metala"
 	  </p>
 	  <br>
-	  <img class="desna"src="ozzy.jpg">  width=333.33 height=500>
+	  <img class="desna" src="ozzy.jpg" width=333.33 height=500>
 	  	<br>
     		<table border="1" width=30%  >
 
