--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -19,9 +19,9 @@
 		  Mnogi obožavatelji nazivaju ga "Ocem heavy metala"
 	  </p>
 	  <br>
-	  <img class="desna" src="ozzy.jpg" width=333 height=500>
+	  <img class="desna" src="ozzy.jpg" >
 	  	<br>
-    		<table border="1" width=30%  >
+    	  <table border="1" width=30%  >
 
 			<tr align=center>
 				<th >Ime i prezime</th>
