--- a/ozzy_osbourne.html
+++ b/ozzy_osbourne.html
@@ -19,7 +19,7 @@
 		  Mnogi obožavatelji nazivaju ga "Ocem heavy metala"
 	  </p>
 	  <br>
-	  <img class="desna" src="ozzy.jpg" >
+	  <img class="desna" src="ozzy.jpg" width=333 height=500 >
 	  	<br>
 	  	<br>
 	  <br>
