--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
       <title>Black Sabbath</title>
       <meta charset="UTF-8"> 
       <link rel="stylesheet" type="text/css" href="moj_stil.css">
+	  <style>
+	    body {
+	      display: flex;
+	      justify-content: center; /* Centriranje po horizontalnoj osi */
+	      align-items: center;     /* Centriranje po vertikalnoj osi */
+	      height: 100vh;           /* Visina viewport-a za centriranje */
+	      margin: 0;
+	    }
+	    ul {
+	      list-style: none;        /* Uklanja oznake sa liste */
+	      padding: 0;
+	      text-align: center;      /* Poravnava stavke liste na sredinu */
+	    }
+	    li {
+	      margin: 10px 0;          /* Dodaje razmak između stavki liste */
+	    }
+  </style>
   </head>
   
   <body>
