--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
       </ul>  
       <br>
 	<h3 class="podnaslov1">Originalni članovi grupe Black Sabbath bili su:</h3>
-	  <ul>
-		<li>Ozzy Osbourne - vokal</li>
-		  <li>Tony Iommi - gitara</li>
-		  <li>Geezer Butler - bas gitara</li>
-		  <li >Bill Ward - bubnjevi</li>
-		  
-	</ul>
+	  <div class="centrirana-lista">
+        	<ul class="centar">
+            <li>Ozzy Osbourne - vokal</li>
+            <li>Tony Iommi - gitara</li>
+            <li>Geezer Butler - bas gitara</li>
+            <li>Bill Ward - bubnjevi</li>
+        </ul>
+    </div>
     
 	
 	<map name="mapa">
