--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
       <br></br>
 	 
       
-      <h3 class="podnaslov1">Što je Black Sabbath? </h3>
+      <h3 >Što je Black Sabbath? </h3>
       <ul >
         <li >Engleska rock grupa osnovana u Birminghamu 1968. pod nazivom Earth</li>
         <li >Smatra ih se pionirima heavy metala</li>
         <li >Primljeni su u Rock and Roll Hall of Fame 2006. godine</li>
       </ul>  
       <br>
-	<h3 class="podnaslov1">Originalni članovi grupe Black Sabbath bili su:</h3>
-	  <div class="centrirana-lista">
-        	<ul class="centar">
+	<h3 >Originalni članovi grupe Black Sabbath bili su:</h3>
+	  
+        <ul >
             <li>Ozzy Osbourne - vokal</li>
             <li>Tony Iommi - gitara</li>
             <li>Geezer Butler - bas gitara</li>
             <li>Bill Ward - bubnjevi</li>
         </ul>
-    </div>
+   
      <img clss="desna" src="members.jpg" usemap="#mapa" width=430 height=500>
 	
 	<map name="mapa">
