--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
       <title>Black Sabbath</title>
       <meta charset="UTF-8"> 
@@ -36,10 +37,10 @@
 	  <br>
 	
 	<map name="mapa">
-			<area shape="circle" coords="126, 58, 26" alt="Tony Iommi" href="https://en.wikipedia.org/wiki/Tony_Iommi">
-			<area shape="circle" coords="227, 67, 35 " alt="Bill Ward" href="https://en.wikipedia.org/wiki/Bill_Ward_(musician)">
-			<area shape="circle" coords="343, 231, 39" alt="Geezer Butler" href="https://en.wikipedia.org/wiki/Geezer_Butler">
-			<area shape="circle" coords="158, 188, 28" alt="Ozzy Osbourne" href="https://en.wikipedia.org/wiki/Ozzy_Osbourne">
+			<area shape="circle" coords="126,58,26" alt="Tony Iommi" href="https://en.wikipedia.org/wiki/Tony_Iommi">
+			<area shape="circle" coords="227,67,35 " alt="Bill Ward" href="https://en.wikipedia.org/wiki/Bill_Ward_(musician)">
+			<area shape="circle" coords="343,231,39" alt="Geezer Butler" href="https://en.wikipedia.org/wiki/Geezer_Butler">
+			<area shape="circle" coords="158,188,28" alt="Ozzy Osbourne" href="https://en.wikipedia.org/wiki/Ozzy_Osbourne">
 			
 		</map>
 	<br>
