--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <li>Bill Ward - bubnjevi</li>
         </ul>
    <br>
-     <img src="members.jpg" usemap="#mapa" width=430 height=500>
+     <img src="members.jpg" usemap="#mapa" width=430 height=500 alt="">
 	  <br>
 	
 	<map name="mapa">
 			<area shape="circle" coords="126,58,26" alt="Tony Iommi" href="https://en.wikipedia.org/wiki/Tony_Iommi">
-			<area shape="circle" coords="227,67,35 " alt="Bill Ward" href="https://en.wikipedia.org/wiki/Bill_Ward_(musician)">
+			<area shape="circle" coords="227,67,35" alt="Bill Ward" href="https://en.wikipedia.org/wiki/Bill_Ward_(musician)">
 			<area shape="circle" coords="343,231,39" alt="Geezer Butler" href="https://en.wikipedia.org/wiki/Geezer_Butler">
 			<area shape="circle" coords="158,188,28" alt="Ozzy Osbourne" href="https://en.wikipedia.org/wiki/Ozzy_Osbourne">
 			
