--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 		 Black Sabbath ima mnogo poznatih pjesama, ali jedna od najpoznatijih je definitivno "Paranoid". Ova pjesma je izdana kao singl 1970. godine i postala je simbolom i himnom heavy metala.
 	 </p> 
 	  <a href="https://www.youtube.com/watch?v=BOTIIw76qiE">Poslušaj pjesmu</a>
+
+	  <img src=
 	 
   </body>
 
