--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 	 </p> 
 	  <a href="https://www.youtube.com/watch?v=BOTIIw76qiE">Poslušaj pjesmu</a>
 
-	  <img src=
+	  <img src="logohtml.png" alt="">
+	  <img src="logocss.jpg" alt="">
 	 
   </body>
 
