--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 		 Black Sabbath ima mnogo poznatih pjesama, ali jedna od najpoznatijih je definitivno "Paranoid". Ova pjesma je izdana kao singl 1970. godine i postala je simbolom i himnom heavy metala.
 	 </p> 
 	  <a href="https://www.youtube.com/watch?v=BOTIIw76qiE">Poslušaj pjesmu</a>
-
-	  <img src="logohtml.png" alt="">
-	  <img src="logocss.jpg" alt="">
+	  <br>
+	  <img src="logohtml.png" width=142 lenght=50 alt="">
+	  <img src="logocss.jpg" width=142 lenght=50 alt="">
 	 
   </body>
 
