--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 	 </p> 
 	  <a href="https://www.youtube.com/watch?v=BOTIIw76qiE">Poslušaj pjesmu</a>
 	  <br>
-	  <img src="logohtml.png" width=142 lenght=50 alt="">
-	  <img src="logocss.jpg" width=142 lenght=50 alt="">
+	  <img src="logohtml.png" width=142 height=50 alt="">
+	  <img src="logocss.jpg" width=142 height=50 alt="">
 	 
   </body>
 
